# entropy

./: CMakeLists.txt  COPYRIGHT  LICENSE
include/: entropy.hpp
src/: entropy.cpp
test/: main.cpp
